--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grapesjs experiment</title>
-    <link rel="stylesheet" href="./index.css" />
-</head>
-<body>
-    <main></main>
+  </head>
+
+  <body>
+    <div class="panel__top">
+      <div class="panel__basic-actions"></div>
+      <div class="panel__devices"></div>
+      <div class="panel__switcher"></div>
+    </div>
+
+    <div class="editor-row">
+      <div class="editor-canvas">
+        <div id="gjs">
+          <h1>Hello World Component!</h1>
+        </div>
+      </div>
+
+      <div class="panel__right">
+        <div class="layers-container"></div>
+        <div class="styles-container"></div>
+        <div class="traits-container"></div>
+      </div>
+    </div>
+
+    <div id="blocks"></div>
+
     <script src="./index.ts"></script>
-</body>
+  </body>
 </html>
